== Unreleased

Improvements::

    * add "Run" menu

Bug Fixes::

    * compiler: for loop floating point step fixed
    * compiler: SINGLE -> INTEGER const conversion fixed
	* ide: SELECT CASE autoformat fixed
    * ide: Editor line join folding fixed

== 0.7.0alpha1
