@@ -15,7 +15,7 @@ typedef char bool;
 #define TRUE  1
 #define FALSE 0
 
-#define VERSION            "0.7.1alpha1"
+#define VERSION            "0.7.0alpha2"
 #define COPYRIGHT          "(C) 2020, 2021 by G. Bartsch"
 #define PROGRAM_NAME_SHORT "AQB"
 #define PROGRAM_NAME_LONG  "AQB Amiga QuickBasic"
